# Jusicool-Server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  appspec.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: black.yml  formatter-ci.yml  isort.yml  prod-cd.yml  stage-cd.yml  style.yml  test.yml
api/: urls.py
api/users/: schema.py  serializers.py  urls.py  views.py
apps/users/: communication.py  factories.py  models.py  services.py  tasks.py
config/: __init__.py  celery.py
config/settings/: base.py  local.py  test.py
config/wsgi/: stage.py
core/: exceptions.py  throttles.py
core/cache/: cache.py  prefix.py
core/communication/: __init__.py  tasks.py  templates.py
core/tests/: test_exception.py
internal_api/: urls.py
jusicool/: urls.py
scripts/: deploy.sh  prod.sh  stage.sh
src/account/: enums.py  models.py  serializers.py  urls.py
src/accounts/: admin.py  exceptions.py  models.py  serializers.py  services.py  urls.py
src/community/: models.py  serializers.py  urls.py
src/core/: celery.py  exceptions.py  kis.py  permissions.py  settings.py  sse.py  throttles.py  urls.py
src/crypto/: serializers.py  urls.py
src/crypto_trade/: apps.py  models.py
src/exchange/: enums.py  exceptions.py  serializers.py  urls.py
src/holding/: apps.py  models.py  serializers.py  urls.py
src/market/: apps.py  enums.py  models.py  serializers.py  tasks.py  urls.py
src/order/: enums.py  models.py  (+3 more)
templates/: verify_code.html
(+121 files in other folders)
