[project]
name = "jusicool-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Jueuunn7",email = "wndmsrla1234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
